--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -2,7 +2,7 @@ doctype html
 html
     head
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.9.0/css/all.css")
-        title ParkTube
+        title | #{siteName}
     body
         include ../partials/header
         header
