--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,7 +1,7 @@
 footer.footer
     .footer__icon
         i.fab.fa-youtube-square
-    span.footer__text &copy Park = #{new Date().getFullYear()} Tube Welcome &copy 
+    span.footer__text &copy #{siteName} = #{new Date().getFullYear()} Welcome &copy 
 
 
 
