--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,12 +1,13 @@
 header.header
     .header__column
-        i.fab.fa-youtube-square
+        a(href=routes.home)
+            i.fab.fa-youtube-square
     .header__column
         ul
             li
-                a(href="#") Join
+                a(href=routes.join) Join
             li
-                a(href="#") Log In
+                a(href=routes.login) Log In
 
 
 //- 안에 2개의 열(컬럼)을 추가 할 것임. 왼쪽 열과 오른쪽 열
