--- a/views/partials/header.pug
+++ b/views/partials/header.pug
@@ -1,7 +1,12 @@
+  
 header.header
-    .header__column
-        a(href=routes.home)
-            i.fab.fa-youtube-square
+    .header__wrapper
+        .header__column
+            a(href=routes.home)
+                i.fab.fa-youtube
+        .header__column
+            form(action=routes.search, method="get")
+                input(type="text", placeholder="Search by term...", name="term")
     .header__column
         ul
             li
