--- a/views/home.pug
+++ b/views/home.pug
@@ -2,7 +2,9 @@ extends layouts/main.pug
 
 block content
     .videos
-        h1 Video
+        each video in videos
+            h1=video.title
+            p=video.description
 
 
 //- pug는 html을 이쁘게 만들어준다.
