--- a/views/home.pug
+++ b/views/home.pug
@@ -5,9 +5,10 @@ block content
     .videos
         each item in videos
             +videoBlock({
+                id:item.id,
                 title:item.title,
                 views:item.views,
-                videoFile:item.videoFile  
+                videoFile:item.videoFile
             })
 
 
