--- a/views/search.pug
+++ b/views/search.pug
@@ -5,9 +5,12 @@ block content
     .search__header
         h3 Searching for: #{searchingBy}
     .search__videos
+        if videos.length === 0
+            h5 NO Vidos Found
         each item in videos
             +videoBlock({
                 title:item.title,
                 views:item.views,
-                videoFile:item.videoFile
+                videoFile:item.videoFile,
+                id:item.id
             }) 
