--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -3,6 +3,7 @@ html
     head
         link(rel="stylesheet", href="https://use.fontawesome.com/releases/v5.9.0/css/all.css")
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="/static/styles.css")
     body
         include ../partials/header
         header
@@ -10,6 +11,7 @@ html
         main
             block content
         include ../partials/footer
+        script(src="/static/main.js")
 
 
 
