--- a/views/mixins/videoBlock.pug
+++ b/views/mixins/videoBlock.pug
@@ -1,9 +1,9 @@
-mixin videoBlock(video = {})
+mixin videoBlock(videod = {})
     .videoBlock
-        a(href=routes.videoDetail(video.id))
-            video.videoBlock__thumbnail(src=video.videoFile, controls=true)
-            h4.videoBlock__title=video.title
-            h6.videoBlock__views=video.views
+        a(href=routes.videoDetail(videod.id))
+            video.videoBlock__thumbnail(src=videod.videoFile, controls=true)
+            h4.videoBlock__title=videod.title
+            h6.videoBlock__views=videod.views
 
 
 //- mixin videoBlock(item = {})
