--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -8,4 +8,5 @@ block content
             input(type="text", placeholder="Name", name="name")
             input(type="email", placeholder="Email" name="email")
             input(type="submit", value="Update Profile")
-        a.form-container__link(href=routes.changePassword) Change Password
+        a.form-container__link(href=routes.changePassword) 
+            button Change Password
