--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,14 +5,14 @@ body {
 body {
   background-color: #f5f5f5;
   color: $black;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell,
-    "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px;
 }
 
 main {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1200px;
   margin: 0 auto;
   min-height: 70vh;
 }
@@ -32,12 +32,33 @@ input {
   }
 }
 
+h1 {
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
 button {
   border: none;
   background-color: red;
   color: white;
 }
 
-input[text="submit"] {
+button.delete {
+  background-color: $dark-red;
+}
+
+button,
+input[type="submit"] {
   cursor: pointer;
+}
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  animation: fadeIn 1s linear;
 }
