--- a/static/styles.css
+++ b/static/styles.css
@@ -147,12 +147,12 @@ body {
 body {
   background-color: #f5f5f5;
   color: #444444;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 14px; }
 
 main {
   width: 100%;
-  max-width: 1400px;
+  max-width: 1200px;
   margin: 0 auto;
   min-height: 70vh; }
 
@@ -187,17 +187,38 @@ input {
     font-weight: 300;
     color: rgba(0, 0, 0, 0.7); }
 
+h1 {
+  font-size: 50px;
+  text-align: center;
+  margin-bottom: 20px; }
+
 button {
   border: none;
   background-color: red;
   color: white; }
 
-input[text="submit"] {
+button.delete {
+  background-color: #bb2f2a; }
+
+button,
+input[type="submit"] {
   cursor: pointer; }
+
+.bgImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  -webkit-animation: fadeIn 1s linear;
+     -moz-animation: fadeIn 1s linear;
+       -o-animation: fadeIn 1s linear;
+          animation: fadeIn 1s linear; }
 
 .header {
   background-color: #4682b4;
-  margin-bottom: 50px; }
+  margin-bottom: 10px; }
   .header .header__wrapper {
     padding: 5px 0px;
     width: 100%;
