--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -7,7 +7,7 @@ html
     body
         include ../partials/header
         header
-            h1 ParkTube
+            h1 ParkTube Welcome
         main
             block content
         include ../partials/footer
