--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -18,3 +18,5 @@ block content
                 span.video__comment-number 1 comment
             else
                 span.video__comment-number #{video.comments.length} comments 
+
+//- 위에 src 저렇게 하는 이유는 서버에 있는거라서 그런거임.
