--- a/views/partials/socialLogin.pug
+++ b/views/partials/socialLogin.pug
@@ -5,9 +5,10 @@
                 i.fab.fa-github
             | Continue with Github
     button.social-login--facebook
-        span
-            i.fab.fa-facebook-square
-        | Continue with Facebook
+        a(href=routes.facebook)
+            span
+                i.fab.fa-facebook-square
+            | Continue with Facebook
 //- 깃허브 접속 버튼 만듬
         
         
