--- a/assets/scss/partials/form.scss
+++ b/assets/scss/partials/form.scss
@@ -11,8 +11,8 @@
     .fileUpload {
       display: block;
       width: 100%;
-      padding-top: 5px;
-      padding-bottom: 5px;
+      padding-top: 5px; //텍스트 상자 위로 커짐
+      padding-bottom: 5px; //텍스트 상자 아래로 커짐
       box-shadow: 0px 0px 50px #ffff00;
       &:not(:last-child) {
         //이걸하니 각 입력창에 공간이 생김
