--- a/static/styles.css
+++ b/static/styles.css
@@ -448,6 +448,8 @@ input[type="submit"] {
     .video-detail__container .video__info button {
       width: 100%;
       margin-bottom: 15px; }
+    .video-detail__container .video__info .video__author a {
+      color: #3498db; }
     .video-detail__container .video__info .video__title,
     .video-detail__container .video__info .video__views,
     .video-detail__container .video__info .video__description {
