--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -23,3 +23,4 @@ block content
             else
                 span.video__comment-number #{video.comments.length} comments 
 //- 위에 src 저렇게 하는 이유는 서버에 있는거라서 그런거임.
+//- 그리고 videoController 에서 뿌려준 코드가 video 라서 앞에 쓴거
