--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -12,3 +12,5 @@ block content
 //- routes.editVideo를 누르면 routers 폴더에 있는 videoRouter에 가서 전자에서
 //- routers폴더의 각종 router.js들은 export를 하고 있기 때문에 접근 가능
 //- routes.js에 들어가서 주소를 따오고(req,) 그 다음 반응으로 videoController에 가서 계산.
+//- 6뒤에 value저거는 수정할때 원래 썻던 내용을 표시하기 위함
+//- 7도 마찬가지 이지만 textarea는 value가 없기 때문에 저렇게 적어줬음.
