--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -8,6 +8,7 @@
 @import "partials/form.scss";
 @import "partials/socialLogin.scss";
 @import "partials/videoBlock.scss";
+@import "partials/videoPlayer.scss";
 
 @import "pages/videoDetail";
 @import "pages/home.scss";
