--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -3,7 +3,7 @@ mixin videoPlayer(video = {})
         video(src=`/${video.src}`)
         .videoPlayer__controls
             .videoPlayer__column
-                span
+                span#jsVolumnBtn
                     i.fas.fa-volume-up
                 span
                     |00:00 / 10:00
@@ -11,6 +11,7 @@ mixin videoPlayer(video = {})
                 span#jsPlayButton
                     i.fab.fa-gitlab
             .videoPlayer__column
-                span
+                span#jsFullScreen
                     i.fas.fa-expand
-//- 위에 주소 뒤에 controls를 붙임으로서 재생이 가능해짐  뒤에 autoplay 도 가능           
+//- 위에 주소 뒤에 controls를 붙임으로서 재생이 가능해짐 
+//- 뒤에 autoplay 도 가능
