--- a/static/styles.css
+++ b/static/styles.css
@@ -467,6 +467,15 @@ input[type="submit"] {
       font-size: 25px;
       cursor: pointer; }
 
+.record-container {
+  width: 100%;
+  max-width: 320px;
+  margin-bottom: 50px; }
+  .record-container video {
+    background-color: #444444;
+    width: 100%;
+    margin-bottom: 20px; }
+
 .video-detail__container {
   display: -webkit-box;
   display: -webkit-flex;
