--- a/views/upload.pug
+++ b/views/upload.pug
@@ -5,13 +5,13 @@ block content
         .record-container#jsRecordContainer
             video#jsVideoPreview
             button#jsRecordBtn Start Recording
-        form(action=`/videos${routes.upload}`, method="post")
+        form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
             div.fileUpload
                 label(for="file") Video File
                 input(type="file", id="file", name="videoFile", required=true, accept="video/*")
             input(type="text", placeholder="Title", name="title", required=true)
             textarea(name="description", placeholder="Description", required=true)
-            input(type="submit", value="Upload Video", required=true)
+            input(type="submit", value="Upload Video")
 
 
 //-form(action=`/videos${routes.upload}`, method="post", enctype="multipart/form-data")
