--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -22,8 +22,19 @@ block content
                 a(href=routes.userDetail(video.creator.id))=video.creator.name
         .video__comments
             if video.comments.length === 1
-                span.video__comment-number 1 comment
+                span.video__comment-number
+                    span#jsCommentNumber 1
+                    |  comment
             else
-                span.video__comment-number #{video.comments.length} comments 
+                span.video__comment-number
+                    span#jsCommentNumber=video.comments.length
+                    |  comments
+            form.add__comment#jsAddComment
+                input(type="text", placeholder="Add a comment")
+            ul.video__comments-list#jsCommentList
+                each comment in video.comments.reverse()
+                    li
+                        span=comment.text
+
 //- 위에 src 저렇게 하는 이유는 서버에 있는거라서 그런거임.
 //- 그리고 videoController 에서 뿌려준 코드가 video 라서 앞에 쓴거
