--- a/views/editProfile.pug
+++ b/views/editProfile.pug
@@ -9,3 +9,4 @@ block content
             input(type="text", placeholder="Name", name="name", value=loggedUser.name)
             input(type="email", placeholder="Email", name="email", value=loggedUser.email)
             input(type="submit", value="Update Profile")
+//- 위에 value를 적음으로 인해 기존에 있던 내용을 미리 표시해두는것임
