--- a/views/mixins/videoPlayer.pug
+++ b/views/mixins/videoPlayer.pug
@@ -18,3 +18,4 @@ mixin videoPlayer(video = {})
                     i.fas.fa-expand
 //- 위에 주소 뒤에 controls를 붙임으로서 재생이 가능해짐 
 //- 뒤에 autoplay 도 가능
+//- 쉬이벌
